docs(#203): SRS capstone lessons-learned + baseline + manifest bootstrap
Closes #203 capstone (SRS toolchain dogfood on SaaSFoundry itself):
- .srs-audit/follow-ups.md — 12 findings consolidated under parent #235
- .srs-audit/baseline-report-fixed-root.json — reference eval baseline
  (score 32, 34 fr-without-code — false negatives driven by #236 matcher)
- sf-srs/SKILL.md (+ scaffold mirror) — lessons-learned section
- .gitignore — persist only the two artefacts referenced by #203 exit,
  keep the rest of .srs-audit/ as local scratch
- .saasfoundry.json — SRS module bootstrapped to a fresh Notion workspace
  during the capstone (tools.srs.rootPage + categories)

Follow-ups split across 12 sub-issues under #235:
P1 matcher (#236), inventory (#237), scan exclusions (#238)
P2 token persist (#239), add-modules guard (#240), sf srs CLI (#241),
   sf status (#242), SessionStart hook (#243), skill trigger split (#244),
   write-srs batch links (#245), DS/TC/NFR via AI (#247)
P3 em-dash sync (#246)